Update email page and synchronize API client generated code
